add Utils.hpp to separate utility functionality

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 CPP=g++
 CFLAGS=-Wall -pedantic -std=c++11 -g
-OBJS=HiddenMarkovModel.o
+OBJS=HiddenMarkovModel.o Utils.o
 
 all: recognize statepath optimize
 
